2001-11-09  Jody Goldberg <jgoldberg@home.com>

	* gnumeric-expr-entry.c (gnumeric_expr_entry_rangesel_start) : begin
	parsing the sheet name.  Still need to support starting in the
	sheetname, and to actually use the name.
	(gnumeric_expr_entry_parse) : new utility.

2001-11-05  Jody Goldberg <jgoldberg@home.com>

	* gnumeric-expr-entry.c (make_rangesel_text) : don't use the flags,
	  store the ab/srel info in the selector.
	(update_rangesel_text) : use the pos from the entry.
	(gnumeric_expr_entry_rangesel_start) : new routine to find the start
	  of a range.  Still needs work to support intra-{sheet,book}
	  references.
	(gnumeric_expr_entry_key_press_event) : move F4 handling here.

2001-11-05  Jody Goldberg <jgoldberg@home,com>

	* Release 0.75

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* Release 0.74

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* Release 0.73

2000-10-25  Morten Welinder  <terra@diku.dk>

	* widget-font-selector.c (font_selected): Plug leak.
	(style_selected): Ditto.
	(size_changed): Ditto.
	(font_selector_set_style): Ditto.
	(font_selector_set_strike): Ditto.
	(font_selector_set_underline): Ditto.
	(font_selector_set_color): Ditto.
	(fs_destroy): Ditto.

2001-10-18  Jody Goldberg <jgoldberg@home.com>

	* Release 0.72

2001-10-10  Jody Goldberg <jgoldberg@home.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=62109
	* widget-font-selector.c (reload_preview) : send a style with only the
	  elements that changed, not the entire format.  Only send the signal
	  if something actually changed.
	(font_selected) : signature change for reload_preview.
	(style_selected) : Ditto.
	(size_changed) : Ditto.
	(canvas_size_changed) : Ditto.
	(font_selector_set_value) : Ditto.
	(font_selector_set_style) : Ditto.
	(font_selector_set_strike) : Ditto.
	(font_selector_set_underline) : Ditto.
	(font_selector_set_color) : Ditto.

2001-10-07  Jody Goldberg <jgoldberg@home.com>

	* Release 0.71

2001-10-04  Jody Goldberg <jgoldberg@home.com>
